# LD48

./: Cargo.toml  README.md  vimrc
docs/concept_art/misc/: pickup_AS_0.aseprite  portal_AS_0.aseprite  portal_AS_1.aseprite
ez_mode/: README.md  ez_zones.ron
resources/config/: display.ron  ingame_bindings.ron  menu_bindings.ron
resources/levels/: cutscene.json  dev.json
resources/settings/: audio.ron  camera.ron  lanes.ron  objects.ron  player.ron  savefile.ron
resources/settings/objects/: backgrounds.ron  coins.ron  cutscene.ron  objects.ron  portal.ron  space.ron  turrets.ron
resources/settings/zones/: _zones.ron  dev.ron  dev_0.ron  dev_1.ron  dev_2.ron  green.ron  psychedelic.ron  red.ron  space.ron  well.ron  zones.ron
resources/spritesheets/: cutscene.ron  player.ron  portal_fg.ron  portal_fg_red.ron
resources/spritesheets/bg/: bg_psychedelic_6.ron  bg_red.ron  bg_space_1.ron  bg_well_0.ron  bg_well_2.ron
resources/spritesheets/coins/: coin_green.ron
resources/spritesheets/space/: nokia.ron  (+3 more)
resources/ui/: cutscene.ron  game_over.ron  ingame.ron  main_menu.ron  pause.ron  zone_select.ron  zone_transition.ron
src/: main.rs
src/components/: belongs_to_segment.rs  camera.rs  coin.rs  cutscene.rs  delete_delay.rs  mod.rs  object.rs  obstacle.rs  on_lane.rs  parent_delete.rs  portal.rs  rotate.rs  segment.rs  tile.rs  turret.rs
src/init/: init_game_data.rs  mod.rs
src/input/: ingame_bindings.rs  menu_bindings.rs
src/level_loader/: data.rs  load_objects.rs  load_tiles.rs  mod.rs  objects.rs  tiles.rs
src/resources/: animation_key.rs  collision_tag.rs  dispatcher_id.rs  entities_to_delete.rs  game_over.rs  lanes.rs  mod.rs  object_spawner.rs  score.rs  segments_to_delete.rs  selected_zone.rs  should_load_next_zone.rs  song_key.rs  sound_key.rs  zone_height.rs  zone_progression_mode.rs  zone_size.rs  zones_manager.rs
src/savefile/: highscore.rs  mod.rs
src/settings/: audio_settings.rs  camera_settings.rs  entity_components.rs  hitbox_config.rs  lanes_settings.rs  mod.rs  objects_settings.rs  player_settings.rs  savefile_settings.rs  zones_settings.rs
src/states/: cutscene.rs  game_over_state.rs  ingame.rs  main_menu.rs  mod.rs  pause.rs  startup.rs  state_helpers.rs  zone_select.rs  zone_transition.rs
src/systems/: confine_camera_to_final_segment.rs  confine_camera_to_first_and_final_segment.rs  control_player.rs  delete_entities.rs  delete_segment_entities.rs  handle_coin_collection.rs  handle_delete_delay.rs  handle_obstacle.rs  handle_parent_delete.rs  handle_segment_loading.rs  handle_turret.rs  handle_zone_select.rs  handle_zone_switch.rs  mod.rs  update_highscore_ui.rs  update_on_lane.rs  update_rotate.rs  update_score_ui.rs  update_selected_zone_ui.rs  update_zones_manager.rs
tiled/: export-script.js
tiled/tmx/: cutscene.tmx  dev.tmx
tiled/tsx/: dev.tsx  tiles_green.tsx  tiles_red.tsx
(+119 files in other folders)
