[package]
name = "ld48"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
rand = "0.8.3"
replace_with = "0.1.7"
ron = "0.6.4"
serde_json = "1.0.64"

[dependencies.deathframe]
version = "*"
git = "https://github.com/Noah2610/deathframe"
branch = "develop"
features = [
    "animation",
    "audio",
    "physics",
    "vulkan",
]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[features]
default = []
debug = ["deathframe/debug"]

[profile.dev]
opt-level        = 2
debug            = true
debug-assertions = true
codegen-units    = 8
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
