[package]
name = "ld48-driftdown"
version = "1.0.3"
authors = []
edition = "2018"

[dependencies]
dirs = "3.0.2"
rand = "0.8.3"
replace_with = "0.1.7"
ron = "0.6.4"
serde_json = "1.0.64"

[dependencies.deathframe]
path = "../deathframe"
# version = "*"
# git = "https://github.com/Noah2610/deathframe"
# branch = "develop"
features = [
    "animation",
    "audio",
    "physics",
]

[dependencies.climer]
version = "0.6.0"
default-features = false

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[features]
default = ["gl"]
debug = ["deathframe/debug"]
gl = ["deathframe/gl"]
vulkan = ["deathframe/vulkan"]
metal = ["deathframe/metal"]
dev = []

[profile.dev]
opt-level        = 1
debug            = true
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true
lto              = "off"

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
lto              = true
